Add Ken Brown to AUTHORS
(cherry picked from commit 133e1f55118a8892ad5b9433ec99dd7a95c61dbc)

--- a/AUTHORS
+++ b/AUTHORS
@@ -686,6 +686,7 @@ KAWAI Takanori			<GCD00051@nifty.ne.jp>
 Keedi Kim			<keedi@cpan.org>
 Keith Neufeld			<neufeld@fast.pvi.org>
 Keith Thompson			<Keith.S.Thompson@gmail.com>
+Ken Brown			<kbrown@cornell.edu>
 Ken Estes			<estes@ms.com>
 Ken Fox				<kfox@ford.com>
 Ken Hirsch			<kenhirsch@ftml.net>
