--- a/pod/perlhist.pod
+++ b/pod/perlhist.pod
@@ -603,6 +603,7 @@ the strings?).
  Steve     5.24.2-RC1   2017-Jul-01
  Steve     5.24.2       2017-Jul-15
  Steve     5.24.3-RC1   2017-Sep-10
+ Steve     5.24.3       2017-Sep-22
 
  Ricardo   5.25.0       2016-May-09     The 5.25 development track
  Sawyer X  5.25.1       2016-May-20
@@ -622,6 +623,7 @@ the strings?).
  Sawyer X  5.26.0-RC2   2017-May-23
  Sawyer X  5.26.0       2017-May-30
  Steve     5.26.1-RC1   2017-Sep-10
+ Steve     5.26.1       2017-Sep-22
 
  Sawyer X  5.27.0       2017-May-31     The 5.27 development track
  Eric      5.27.1       2017-Jun-20
