--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -276,20 +276,21 @@ L<[perl #131260]|https://rt.perl.org/Public/Bug/Display.html?id=131260>
 =head1 Acknowledgements
 
 Perl 5.24.3 represents approximately 2 months of development since Perl 5.24.2
-and contains approximately 3,100 lines of changes across 120 files from 20
+and contains approximately 3,200 lines of changes across 120 files from 23
 authors.
 
 Excluding auto-generated files, documentation and release tools, there were
-approximately 1,500 lines of changes to 56 .pm, .t, .c and .h files.
+approximately 1,600 lines of changes to 56 .pm, .t, .c and .h files.
 
 Perl continues to flourish into its third decade thanks to a vibrant community
 of users and developers.  The following people are known to have contributed
 the improvements that became Perl 5.24.3:
 
-Aaron Crane, Craig A. Berry, Dan Collins, Daniel Dragan, Dave Cross, David
-Mitchell, Eric Herman, Father Chrysostomos, H.Merijn Brand, Hugo van der
-Sanden, James E Keenan, Jarkko Hietaniemi, Karl Williamson, Lukas Mai, Matthew
-Horsfall, Stevan Little, Steve Hay, Steven Humphrey, Tony Cook, Yves Orton.
+Aaron Crane, Craig A. Berry, Dagfinn Ilmari Mannsåker, Dan Collins, Daniel
+Dragan, Dave Cross, David Mitchell, Eric Herman, Father Chrysostomos, H.Merijn
+Brand, Hugo van der Sanden, James E Keenan, Jarkko Hietaniemi, John SJ
+Anderson, Karl Williamson, Ken Brown, Lukas Mai, Matthew Horsfall, Stevan
+Little, Steve Hay, Steven Humphrey, Tony Cook, Yves Orton.
 
 The list above is almost certainly incomplete as it is automatically generated
 from version control history.  In particular, it does not include the names of
