--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -2,45 +2,116 @@
 
 =head1 NAME
 
-perldelta - what is new for perl v5.24.3
+[ this is a template for a new perldelta file.  Any text flagged as XXX needs
+to be processed before release. ]
+
+perldelta - what is new for perl v5.24.4
 
 =head1 DESCRIPTION
 
-This document describes differences between the 5.24.2 release and the 5.24.3
+This document describes differences between the 5.24.3 release and the 5.24.4
 release.
 
-If you are upgrading from an earlier release such as 5.24.1, first read
-L<perl5242delta>, which describes differences between 5.24.1 and 5.24.2.
+If you are upgrading from an earlier release such as 5.24.2, first read
+L<perl5243delta>, which describes differences between 5.24.2 and 5.24.3.
+
+=head1 Notice
+
+XXX Any important notices here
+
+=head1 Core Enhancements
+
+XXX New core language features go here.  Summarize user-visible core language
+enhancements.  Particularly prominent performance optimisations could go
+here, but most should go in the L</Performance Enhancements> section.
+
+[ List each enhancement as a =head2 entry ]
 
 =head1 Security
 
-=head2 [CVE-2017-12837] Heap buffer overflow in regular expression compiler
+XXX Any security-related notices go here.  In particular, any security
+vulnerabilities closed should be noted here rather than in the
+L</Selected Bug Fixes> section.
 
-Compiling certain regular expression patterns with the case-insensitive
-modifier could cause a heap buffer overflow and crash perl.  This has now been
-fixed.
-L<[perl #131582]|https://rt.perl.org/Public/Bug/Display.html?id=131582>
-
-=head2 [CVE-2017-12883] Buffer over-read in regular expression parser
-
-For certain types of syntax error in a regular expression pattern, the error
-message could either contain the contents of a random, possibly large, chunk of
-memory, or could crash perl.  This has now been fixed.
-L<[perl #131598]|https://rt.perl.org/Public/Bug/Display.html?id=131598>
-
-=head2 [CVE-2017-12814] C<$ENV{$key}> stack buffer overflow on Windows
-
-A possible stack buffer overflow in the C<%ENV> code on Windows has been fixed
-by removing the buffer completely since it was superfluous anyway.
-L<[perl #131665]|https://rt.perl.org/Public/Bug/Display.html?id=131665>
+[ List each security issue as a =head2 entry ]
 
 =head1 Incompatible Changes
 
-There are no changes intentionally incompatible with 5.24.2.  If any exist,
-they are bugs, and we request that you submit a report.  See L</Reporting
-Bugs> below.
+XXX For a release on a stable branch, this section aspires to be:
+
+    There are no changes intentionally incompatible with 5.XXX.XXX
+    If any exist, they are bugs, and we request that you submit a
+    report.  See L</Reporting Bugs> below.
+
+[ List each incompatible change as a =head2 entry ]
+
+=head1 Deprecations
+
+XXX Any deprecated features, syntax, modules etc. should be listed here.
+
+=head2 Module removals
+
+XXX Remove this section if inapplicable.
+
+The following modules will be removed from the core distribution in a
+future release, and will at that time need to be installed from CPAN.
+Distributions on CPAN which require these modules will need to list them as
+prerequisites.
+
+The core versions of these modules will now issue C<"deprecated">-category
+warnings to alert you to this fact.  To silence these deprecation warnings,
+install the modules in question from CPAN.
+
+Note that these are (with rare exceptions) fine modules that you are encouraged
+to continue to use.  Their disinclusion from core primarily hinges on their
+necessity to bootstrapping a fully functional, CPAN-capable Perl installation,
+not usually on concerns over their design.
+
+=over
+
+=item XXX
+
+XXX Note that deprecated modules should be listed here even if they are listed
+as an updated module in the L</Modules and Pragmata> section.
+
+=back
+
+[ List each other deprecation as a =head2 entry ]
+
+=head1 Performance Enhancements
+
+XXX Changes which enhance performance without changing behaviour go here.
+There may well be none in a stable release.
+
+[ List each enhancement as a =item entry ]
+
+=over 4
+
+=item *
+
+XXX
+
+=back
 
 =head1 Modules and Pragmata
+
+XXX All changes to installed files in F<cpan/>, F<dist/>, F<ext/> and F<lib/>
+go here.  If Module::CoreList is updated, generate an initial draft of the
+following sections using F<Porting/corelist-perldelta.pl>.  A paragraph summary
+for important changes should then be added by hand.  In an ideal world,
+dual-life modules would have a F<Changes> file that could be cribbed.
+
+[ Within each section, list entries as a =item entry ]
+
+=head2 New Modules and Pragmata
+
+=over 4
+
+=item *
+
+XXX
+
+=back
 
 =head2 Updated Modules and Pragmata
 
@@ -48,261 +119,266 @@ Bugs> below.
 
 =item *
 
-L<Module::CoreList> has been upgraded from version 5.20170715_24 to
-5.20170922_24.
+L<XXX> has been upgraded from version A.xx to B.yy.
+
+=back
+
+=head2 Removed Modules and Pragmata
+
+=over 4
 
 =item *
 
-L<POSIX> has been upgraded from version 1.65 to 1.65_01.
+XXX
+
+=back
+
+=head1 Documentation
+
+XXX Changes to files in F<pod/> go here.  Consider grouping entries by
+file and be sure to link to the appropriate page, e.g. L<perlfunc>.
+
+=head2 New Documentation
+
+XXX Changes which create B<new> files in F<pod/> go here.
+
+=head3 L<XXX>
+
+XXX Description of the purpose of the new file here
+
+=head2 Changes to Existing Documentation
+
+XXX Changes which significantly change existing files in F<pod/> go here.
+However, any changes to F<pod/perldiag.pod> should go in the L</Diagnostics>
+section.
+
+=head3 L<XXX>
+
+=over 4
 
 =item *
 
-L<Time::HiRes> has been upgraded from version 1.9733 to 1.9741.
+XXX Description of the change here
 
-L<[perl #128427]|https://rt.perl.org/Public/Bug/Display.html?id=128427>
-L<[perl #128445]|https://rt.perl.org/Public/Bug/Display.html?id=128445>
-L<[perl #128972]|https://rt.perl.org/Public/Bug/Display.html?id=128972>
-L<[cpan #120032]|https://rt.cpan.org/Public/Bug/Display.html?id=120032>
+=back
+
+=head1 Diagnostics
+
+The following additions or changes have been made to diagnostic output,
+including warnings and fatal error messages.  For the complete list of
+diagnostic messages, see L<perldiag>.
+
+XXX New or changed warnings emitted by the core's C<C> code go here.  Also
+include any changes in L<perldiag> that reconcile it to the C<C> code.
+
+=head2 New Diagnostics
+
+XXX Newly added diagnostic messages go under here, separated into New Errors
+and New Warnings
+
+=head3 New Errors
+
+=over 4
+
+=item *
+
+XXX L<message|perldiag/"message">
+
+=back
+
+=head3 New Warnings
+
+=over 4
+
+=item *
+
+XXX L<message|perldiag/"message">
+
+=back
+
+=head2 Changes to Existing Diagnostics
+
+XXX Changes (i.e. rewording) of diagnostic messages go here
+
+=over 4
+
+=item *
+
+XXX Describe change here
+
+=back
+
+=head1 Utility Changes
+
+XXX Changes to installed programs such as F<perlbug> and F<xsubpp> go here.
+Most of these are built within the directory F<utils>.
+
+[ List utility changes as a =head2 entry for each utility and =item
+entries for each change
+Use L<XXX> with program names to get proper documentation linking. ]
+
+=head2 L<XXX>
+
+=over 4
+
+=item *
+
+XXX
 
 =back
 
 =head1 Configuration and Compilation
 
+XXX Changes to F<Configure>, F<installperl>, F<installman>, and analogous tools
+go here.  Any other changes to the Perl build process should be listed here.
+However, any platform-specific changes should be listed in the
+L</Platform Support> section, instead.
+
+[ List changes as a =item entry ].
+
 =over 4
 
 =item *
 
-When building with GCC 6 and link-time optimization (the B<-flto> option to
-B<gcc>), F<Configure> was treating all probed symbols as present on the system,
-regardless of whether they actually exist.  This has been fixed.
-L<[perl #128131]|https://rt.perl.org/Public/Bug/Display.html?id=128131>
+XXX
+
+=back
+
+=head1 Testing
+
+XXX Any significant changes to the testing of a freshly built perl should be
+listed here.  Changes which create B<new> files in F<t/> go here as do any
+large changes to the testing harness (e.g. when parallel testing was added).
+Changes to existing files in F<t/> aren't worth summarizing, although the bugs
+that they represent may be covered elsewhere.
+
+[ List each test improvement as a =item entry ]
+
+=over 4
 
 =item *
 
-F<Configure> now aborts if both C<-Duselongdouble> and C<-Dusequadmath> are
-requested.
-L<[perl #126203]|https://rt.perl.org/Public/Bug/Display.html?id=126203>
-
-=item *
-
-Fixed a bug in which F<Configure> could append C<-quadmath> to the archname
-even if it was already present.
-L<[perl #128538]|https://rt.perl.org/Public/Bug/Display.html?id=128538>
-
-=item *
-
-Clang builds with C<-DPERL_GLOBAL_STRUCT> or C<-DPERL_GLOBAL_STRUCT_PRIVATE>
-have been fixed (by disabling Thread Safety Analysis for these configurations).
+XXX
 
 =back
 
 =head1 Platform Support
 
+XXX Any changes to platform support should be listed in the sections below.
+
+[ Within the sections, list each platform as a =item entry with specific
+changes as paragraphs below it. ]
+
+=head2 New Platforms
+
+XXX List any platforms that this version of perl compiles on, that previous
+versions did not.  These will either be enabled by new files in the F<hints/>
+directories, or new subdirectories and F<README> files at the top level of the
+source tree.
+
+=over 4
+
+=item XXX-some-platform
+
+XXX
+
+=back
+
+=head2 Discontinued Platforms
+
+XXX List any platforms that this version of perl no longer compiles on.
+
+=over 4
+
+=item XXX-some-platform
+
+XXX
+
+=back
+
 =head2 Platform-Specific Notes
 
+XXX List any changes for specific platforms.  This could include configuration
+and compilation changes or changes in portability/compatibility.  However,
+changes within modules for platforms should generally be listed in the
+L</Modules and Pragmata> section.
+
 =over 4
 
-=item VMS
+=item XXX-some-platform
+
+XXX
+
+=back
+
+=head1 Internal Changes
+
+XXX Changes which affect the interface available to C<XS> code go here.  Other
+significant internal changes for future core maintainers should be noted as
+well.
+
+[ List each change as a =item entry ]
 
 =over 4
 
 =item *
 
-C<configure.com> now recognizes the VSI-branded C compiler.
-
-=back
-
-=item Windows
-
-=over 4
-
-=item *
-
-Building XS modules with GCC 6 in a 64-bit build of Perl failed due to
-incorrect mapping of C<strtoll> and C<strtoull>.  This has now been fixed.
-L<[perl #131726]|https://rt.perl.org/Public/Bug/Display.html?id=131726>
-L<[cpan #121683]|https://rt.cpan.org/Public/Bug/Display.html?id=121683>
-L<[cpan #122353]|https://rt.cpan.org/Public/Bug/Display.html?id=122353>
-
-=back
+XXX
 
 =back
 
 =head1 Selected Bug Fixes
 
+XXX Important bug fixes in the core language are summarized here.  Bug fixes in
+files in F<ext/> and F<lib/> are best summarized in L</Modules and Pragmata>.
+
+[ List each fix as a =item entry ]
+
 =over 4
 
 =item *
 
-C<< /@0{0*-E<gt>@*/*0 >> and similar contortions used to crash, but no longer
-do, but merely produce a syntax error.
-L<[perl #128171]|https://rt.perl.org/Public/Bug/Display.html?id=128171>
-
-=item *
-
-C<do> or C<require> with an argument which is a reference or typeglob which,
-when stringified, contains a null character, started crashing in Perl 5.20, but
-has now been fixed.
-L<[perl #128182]|https://rt.perl.org/Public/Bug/Display.html?id=128182>
-
-=item *
-
-Expressions containing an C<&&> or C<||> operator (or their synonyms C<and> and
-C<or>) were being compiled incorrectly in some cases.  If the left-hand side
-consisted of either a negated bareword constant or a negated C<do {}> block
-containing a constant expression, and the right-hand side consisted of a
-negated non-foldable expression, one of the negations was effectively ignored.
-The same was true of C<if> and C<unless> statement modifiers, though with the
-left-hand and right-hand sides swapped.  This long-standing bug has now been
-fixed.
-L<[perl #127952]|https://rt.perl.org/Public/Bug/Display.html?id=127952>
-
-=item *
-
-C<reset> with an argument no longer crashes when encountering stash entries
-other than globs.
-L<[perl #128106]|https://rt.perl.org/Public/Bug/Display.html?id=128106>
-
-=item *
-
-Assignment of hashes to, and deletion of, typeglobs named C<*::::::> no longer
-causes crashes.
-L<[perl #128086]|https://rt.perl.org/Public/Bug/Display.html?id=128086>
-
-=item *
-
-Assignment variants of any bitwise ops under the C<bitwise> feature would crash
-if the left-hand side was an array or hash.
-L<[perl #128204]|https://rt.perl.org/Public/Bug/Display.html?id=128204>
-
-=item *
-
-C<socket> now leaves the error code returned by the system in C<$!> on failure.
-L<[perl #128316]|https://rt.perl.org/Public/Bug/Display.html?id=128316>
-
-=item *
-
-Parsing bad POSIX charclasses no longer leaks memory.
-L<[perl #128313]|https://rt.perl.org/Public/Bug/Display.html?id=128313>
-
-=item *
-
-Since Perl 5.20, line numbers have been off by one when perl is invoked with
-the B<-x> switch.  This has been fixed.
-L<[perl #128508]|https://rt.perl.org/Public/Bug/Display.html?id=128508>
-
-=item *
-
-Some obscure cases of subroutines and file handles being freed at the same time
-could result in crashes, but have been fixed.  The crash was introduced in Perl
-5.22.
-L<[perl #128597]|https://rt.perl.org/Public/Bug/Display.html?id=128597>
-
-=item *
-
-Some regular expression parsing glitches could lead to assertion failures with
-regular expressions such as C</(?E<lt>=/> and C</(?E<lt>!/>.  This has now been
-fixed.
-L<[perl #128170]|https://rt.perl.org/Public/Bug/Display.html?id=128170>
-
-=item *
-
-C<gethostent> and similar functions now perform a null check internally, to
-avoid crashing with the torsocks library.  This was a regression from Perl
-5.22.
-L<[perl #128740]|https://rt.perl.org/Public/Bug/Display.html?id=128740>
-
-=item *
-
-Mentioning the same constant twice in a row (which is a syntax error) no longer
-fails an assertion under debugging builds.  This was a regression from Perl
-5.20.
-L<[perl #126482]|https://rt.perl.org/Public/Bug/Display.html?id=126482>
-
-=item *
-
-In Perl 5.24 C<fchown> was changed not to accept negative one as an argument
-because in some platforms that is an error.  However, in some other platforms
-that is an acceptable argument.  This change has been reverted.
-L<[perl #128967]|https://rt.perl.org/Public/Bug/Display.html?id=128967>.
-
-=item *
-
-C<@{x> followed by a newline where C<"x"> represents a control or non-ASCII
-character no longer produces a garbled syntax error message or a crash.
-L<[perl #128951]|https://rt.perl.org/Public/Bug/Display.html?id=128951>
-
-=item *
-
-A regression in Perl 5.24 with C<tr/\N{U+...}/foo/> when the code point was
-between 128 and 255 has been fixed.
-L<[perl #128734]|https://rt.perl.org/Public/Bug/Display.html?id=128734>.
-
-=item *
-
-Many issues relating to C<printf "%a"> of hexadecimal floating point were
-fixed.  In addition, the "subnormals" (formerly known as "denormals") floating
-point numbers are now supported both with the plain IEEE 754 floating point
-numbers (64-bit or 128-bit) and the x86 80-bit "extended precision".  Note that
-subnormal hexadecimal floating point literals will give a warning about
-"exponent underflow".
-L<[perl #128843]|https://rt.perl.org/Public/Bug/Display.html?id=128843>
-L<[perl #128888]|https://rt.perl.org/Public/Bug/Display.html?id=128888>
-L<[perl #128889]|https://rt.perl.org/Public/Bug/Display.html?id=128889>
-L<[perl #128890]|https://rt.perl.org/Public/Bug/Display.html?id=128890>
-L<[perl #128893]|https://rt.perl.org/Public/Bug/Display.html?id=128893>
-L<[perl #128909]|https://rt.perl.org/Public/Bug/Display.html?id=128909>
-L<[perl #128919]|https://rt.perl.org/Public/Bug/Display.html?id=128919>
-
-=item *
-
-The parser could sometimes crash if a bareword came after C<evalbytes>.
-L<[perl #129196]|https://rt.perl.org/Public/Bug/Display.html?id=129196>
-
-=item *
-
-Fixed a place where the regex parser was not setting the syntax error correctly
-on a syntactically incorrect pattern.
-L<[perl #129122]|https://rt.perl.org/Public/Bug/Display.html?id=129122>
-
-=item *
-
-A vulnerability in Perl's C<sprintf> implementation has been fixed by avoiding
-a possible memory wrap.
-L<[perl #131260]|https://rt.perl.org/Public/Bug/Display.html?id=131260>
+XXX
 
 =back
 
+=head1 Known Problems
+
+XXX Descriptions of platform agnostic bugs we know we can't fix go here.  Any
+tests that had to be C<TODO>ed for the release would be noted here.  Unfixed
+platform specific bugs also go here.
+
+[ List each fix as a =item entry ]
+
+=over 4
+
+=item *
+
+XXX
+
+=back
+
+=head1 Errata From Previous Releases
+
+=over 4
+
+=item *
+
+XXX Add anything here that we forgot to add, or were mistaken about, in
+the perldelta of a previous release.
+
+=back
+
+=head1 Obituary
+
+XXX If any significant core contributor has died, we've added a short obituary
+here.
+
 =head1 Acknowledgements
 
-Perl 5.24.3 represents approximately 2 months of development since Perl 5.24.2
-and contains approximately 3,200 lines of changes across 120 files from 23
-authors.
+XXX Generate this with:
 
-Excluding auto-generated files, documentation and release tools, there were
-approximately 1,600 lines of changes to 56 .pm, .t, .c and .h files.
-
-Perl continues to flourish into its third decade thanks to a vibrant community
-of users and developers.  The following people are known to have contributed
-the improvements that became Perl 5.24.3:
-
-Aaron Crane, Craig A. Berry, Dagfinn Ilmari Mannsåker, Dan Collins, Daniel
-Dragan, Dave Cross, David Mitchell, Eric Herman, Father Chrysostomos, H.Merijn
-Brand, Hugo van der Sanden, James E Keenan, Jarkko Hietaniemi, John SJ
-Anderson, Karl Williamson, Ken Brown, Lukas Mai, Matthew Horsfall, Stevan
-Little, Steve Hay, Steven Humphrey, Tony Cook, Yves Orton.
-
-The list above is almost certainly incomplete as it is automatically generated
-from version control history.  In particular, it does not include the names of
-the (very much appreciated) contributors who reported issues to the Perl bug
-tracker.
-
-Many of the changes included in this version originated in the CPAN modules
-included in Perl's core.  We're grateful to the entire CPAN community for
-helping Perl to flourish.
-
-For a more complete list of all of Perl's historical contributors, please see
-the F<AUTHORS> file in the Perl source distribution.
+  perl Porting/acknowledgements.pl v5.24.3..HEAD
 
 =head1 Reporting Bugs
 
@@ -318,8 +394,8 @@ will be sent off to perlbug@perl.org to be analysed by the Perl porting team.
 
 If the bug you are reporting has security implications which make it
 inappropriate to send to a publicly archived mailing list, then see
-L<perlsec/SECURITY VULNERABILITY CONTACT INFORMATION> for details of how to
-report the issue.
+L<perlsec/SECURITY VULNERABILITY CONTACT INFORMATION>
+for details of how to report the issue.
 
 =head1 SEE ALSO
 
