--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -2,45 +2,116 @@
 
 =head1 NAME
 
-perldelta - what is new for perl v5.26.1
+[ this is a template for a new perldelta file.  Any text flagged as XXX needs
+to be processed before release. ]
+
+perldelta - what is new for perl v5.26.2
 
 =head1 DESCRIPTION
 
-This document describes differences between the 5.26.0 release and the 5.26.1
+This document describes differences between the 5.26.1 release and the 5.26.2
 release.
 
-If you are upgrading from an earlier release such as 5.24.0, first read
-L<perl5260delta>, which describes differences between 5.24.0 and 5.26.0.
+If you are upgrading from an earlier release such as 5.26.0, first read
+L<perl5261delta>, which describes differences between 5.26.0 and 5.26.1.
+
+=head1 Notice
+
+XXX Any important notices here
+
+=head1 Core Enhancements
+
+XXX New core language features go here.  Summarize user-visible core language
+enhancements.  Particularly prominent performance optimisations could go
+here, but most should go in the L</Performance Enhancements> section.
+
+[ List each enhancement as a =head2 entry ]
 
 =head1 Security
 
-=head2 [CVE-2017-12837] Heap buffer overflow in regular expression compiler
+XXX Any security-related notices go here.  In particular, any security
+vulnerabilities closed should be noted here rather than in the
+L</Selected Bug Fixes> section.
 
-Compiling certain regular expression patterns with the case-insensitive
-modifier could cause a heap buffer overflow and crash perl.  This has now been
-fixed.
-L<[perl #131582]|https://rt.perl.org/Public/Bug/Display.html?id=131582>
-
-=head2 [CVE-2017-12883] Buffer over-read in regular expression parser
-
-For certain types of syntax error in a regular expression pattern, the error
-message could either contain the contents of a random, possibly large, chunk of
-memory, or could crash perl.  This has now been fixed.
-L<[perl #131598]|https://rt.perl.org/Public/Bug/Display.html?id=131598>
-
-=head2 [CVE-2017-12814] C<$ENV{$key}> stack buffer overflow on Windows
-
-A possible stack buffer overflow in the C<%ENV> code on Windows has been fixed
-by removing the buffer completely since it was superfluous anyway.
-L<[perl #131665]|https://rt.perl.org/Public/Bug/Display.html?id=131665>
+[ List each security issue as a =head2 entry ]
 
 =head1 Incompatible Changes
 
-There are no changes intentionally incompatible with 5.26.0.  If any exist,
-they are bugs, and we request that you submit a report.  See L</Reporting
-Bugs> below.
+XXX For a release on a stable branch, this section aspires to be:
+
+    There are no changes intentionally incompatible with 5.XXX.XXX
+    If any exist, they are bugs, and we request that you submit a
+    report.  See L</Reporting Bugs> below.
+
+[ List each incompatible change as a =head2 entry ]
+
+=head1 Deprecations
+
+XXX Any deprecated features, syntax, modules etc. should be listed here.
+
+=head2 Module removals
+
+XXX Remove this section if inapplicable.
+
+The following modules will be removed from the core distribution in a
+future release, and will at that time need to be installed from CPAN.
+Distributions on CPAN which require these modules will need to list them as
+prerequisites.
+
+The core versions of these modules will now issue C<"deprecated">-category
+warnings to alert you to this fact.  To silence these deprecation warnings,
+install the modules in question from CPAN.
+
+Note that these are (with rare exceptions) fine modules that you are encouraged
+to continue to use.  Their disinclusion from core primarily hinges on their
+necessity to bootstrapping a fully functional, CPAN-capable Perl installation,
+not usually on concerns over their design.
+
+=over
+
+=item XXX
+
+XXX Note that deprecated modules should be listed here even if they are listed
+as an updated module in the L</Modules and Pragmata> section.
+
+=back
+
+[ List each other deprecation as a =head2 entry ]
+
+=head1 Performance Enhancements
+
+XXX Changes which enhance performance without changing behaviour go here.
+There may well be none in a stable release.
+
+[ List each enhancement as a =item entry ]
+
+=over 4
+
+=item *
+
+XXX
+
+=back
 
 =head1 Modules and Pragmata
+
+XXX All changes to installed files in F<cpan/>, F<dist/>, F<ext/> and F<lib/>
+go here.  If Module::CoreList is updated, generate an initial draft of the
+following sections using F<Porting/corelist-perldelta.pl>.  A paragraph summary
+for important changes should then be added by hand.  In an ideal world,
+dual-life modules would have a F<Changes> file that could be cribbed.
+
+[ Within each section, list entries as a =item entry ]
+
+=head2 New Modules and Pragmata
+
+=over 4
+
+=item *
+
+XXX
+
+=back
 
 =head2 Updated Modules and Pragmata
 
@@ -48,165 +119,266 @@ Bugs> below.
 
 =item *
 
-L<base> has been upgraded from version 2.25 to 2.26.
+L<XXX> has been upgraded from version A.xx to B.yy.
 
-The effects of dotless C<@INC> on this module have been limited by the
-introduction of a more refined and accurate solution for removing C<'.'> from
-C<@INC> while reducing the false positives.
+=back
 
-=item *
+=head2 Removed Modules and Pragmata
 
-L<charnames> has been upgraded from version 1.44 to 1.45.
+=over 4
 
 =item *
 
-L<Module::CoreList> has been upgraded from version 5.20170530 to 5.20170922_26.
+XXX
+
+=back
+
+=head1 Documentation
+
+XXX Changes to files in F<pod/> go here.  Consider grouping entries by
+file and be sure to link to the appropriate page, e.g. L<perlfunc>.
+
+=head2 New Documentation
+
+XXX Changes which create B<new> files in F<pod/> go here.
+
+=head3 L<XXX>
+
+XXX Description of the purpose of the new file here
+
+=head2 Changes to Existing Documentation
+
+XXX Changes which significantly change existing files in F<pod/> go here.
+However, any changes to F<pod/perldiag.pod> should go in the L</Diagnostics>
+section.
+
+=head3 L<XXX>
+
+=over 4
+
+=item *
+
+XXX Description of the change here
+
+=back
+
+=head1 Diagnostics
+
+The following additions or changes have been made to diagnostic output,
+including warnings and fatal error messages.  For the complete list of
+diagnostic messages, see L<perldiag>.
+
+XXX New or changed warnings emitted by the core's C<C> code go here.  Also
+include any changes in L<perldiag> that reconcile it to the C<C> code.
+
+=head2 New Diagnostics
+
+XXX Newly added diagnostic messages go under here, separated into New Errors
+and New Warnings
+
+=head3 New Errors
+
+=over 4
+
+=item *
+
+XXX L<message|perldiag/"message">
+
+=back
+
+=head3 New Warnings
+
+=over 4
+
+=item *
+
+XXX L<message|perldiag/"message">
+
+=back
+
+=head2 Changes to Existing Diagnostics
+
+XXX Changes (i.e. rewording) of diagnostic messages go here
+
+=over 4
+
+=item *
+
+XXX Describe change here
+
+=back
+
+=head1 Utility Changes
+
+XXX Changes to installed programs such as F<perlbug> and F<xsubpp> go here.
+Most of these are built within the directory F<utils>.
+
+[ List utility changes as a =head2 entry for each utility and =item
+entries for each change
+Use L<XXX> with program names to get proper documentation linking. ]
+
+=head2 L<XXX>
+
+=over 4
+
+=item *
+
+XXX
+
+=back
+
+=head1 Configuration and Compilation
+
+XXX Changes to F<Configure>, F<installperl>, F<installman>, and analogous tools
+go here.  Any other changes to the Perl build process should be listed here.
+However, any platform-specific changes should be listed in the
+L</Platform Support> section, instead.
+
+[ List changes as a =item entry ].
+
+=over 4
+
+=item *
+
+XXX
+
+=back
+
+=head1 Testing
+
+XXX Any significant changes to the testing of a freshly built perl should be
+listed here.  Changes which create B<new> files in F<t/> go here as do any
+large changes to the testing harness (e.g. when parallel testing was added).
+Changes to existing files in F<t/> aren't worth summarizing, although the bugs
+that they represent may be covered elsewhere.
+
+[ List each test improvement as a =item entry ]
+
+=over 4
+
+=item *
+
+XXX
 
 =back
 
 =head1 Platform Support
 
+XXX Any changes to platform support should be listed in the sections below.
+
+[ Within the sections, list each platform as a =item entry with specific
+changes as paragraphs below it. ]
+
+=head2 New Platforms
+
+XXX List any platforms that this version of perl compiles on, that previous
+versions did not.  These will either be enabled by new files in the F<hints/>
+directories, or new subdirectories and F<README> files at the top level of the
+source tree.
+
+=over 4
+
+=item XXX-some-platform
+
+XXX
+
+=back
+
+=head2 Discontinued Platforms
+
+XXX List any platforms that this version of perl no longer compiles on.
+
+=over 4
+
+=item XXX-some-platform
+
+XXX
+
+=back
+
 =head2 Platform-Specific Notes
 
+XXX List any changes for specific platforms.  This could include configuration
+and compilation changes or changes in portability/compatibility.  However,
+changes within modules for platforms should generally be listed in the
+L</Modules and Pragmata> section.
+
 =over 4
 
-=item FreeBSD
+=item XXX-some-platform
 
-=over 4
-
-=item *
-
-Building with B<g++> on FreeBSD-11.0 has been fixed.
-L<[perl #131337]|https://rt.perl.org/Public/Bug/Display.html?id=131337>
+XXX
 
 =back
 
-=item Windows
+=head1 Internal Changes
+
+XXX Changes which affect the interface available to C<XS> code go here.  Other
+significant internal changes for future core maintainers should be noted as
+well.
+
+[ List each change as a =item entry ]
 
 =over 4
 
 =item *
 
-Support for compiling perl on Windows using Microsoft Visual Studio 2017
-(containing Visual C++ 14.1) has been added.
-
-=item *
-
-Building XS modules with GCC 6 in a 64-bit build of Perl failed due to
-incorrect mapping of C<strtoll> and C<strtoull>.  This has now been fixed.
-L<[perl #131726]|https://rt.perl.org/Public/Bug/Display.html?id=131726>
-L<[cpan #121683]|https://rt.cpan.org/Public/Bug/Display.html?id=121683>
-L<[cpan #122353]|https://rt.cpan.org/Public/Bug/Display.html?id=122353>
-
-=back
+XXX
 
 =back
 
 =head1 Selected Bug Fixes
 
+XXX Important bug fixes in the core language are summarized here.  Bug fixes in
+files in F<ext/> and F<lib/> are best summarized in L</Modules and Pragmata>.
+
+[ List each fix as a =item entry ]
+
 =over 4
 
 =item *
 
-Several built-in functions previously had bugs that could cause them to write
-to the internal stack without allocating room for the item being written.  In
-rare situations, this could have led to a crash.  These bugs have now been
-fixed, and if any similar bugs are introduced in future, they will be detected
-automatically in debugging builds.
-L<[perl #131732]|https://rt.perl.org/Public/Bug/Display.html?id=131732>
-
-=item *
-
-Using a symbolic ref with postderef syntax as the key in a hash lookup was
-yielding an assertion failure on debugging builds.
-L<[perl #131627]|https://rt.perl.org/Public/Bug/Display.html?id=131627>
-
-=item *
-
-List assignment (C<aassign>) could in some rare cases allocate an entry on the
-mortal stack and leave the entry uninitialized.
-L<[perl #131570]|https://rt.perl.org/Public/Bug/Display.html?id=131570>
-
-=item *
-
-Attempting to apply an attribute to an C<our> variable where a function of that
-name already exists could result in a NULL pointer being supplied where an SV
-was expected, crashing perl.
-L<[perl #131597]|https://rt.perl.org/Public/Bug/Display.html?id=131597>
-
-=item *
-
-The code that vivifies a typeglob out of a code ref made some false assumptions
-that could lead to a crash in cases such as C<< $::{"A"} = sub {}; \&{"A"} >>.
-This has now been fixed.
-L<[perl #131085]|https://rt.perl.org/Public/Bug/Display.html?id=131085>
-
-=item *
-
-C<my_atof2> no longer reads beyond the terminating NUL, which previously
-occurred if the decimal point is immediately before the NUL.
-L<[perl #131526]|https://rt.perl.org/Public/Bug/Display.html?id=131526>
-
-=item *
-
-Occasional "Malformed UTF-8 character" crashes in C<s//> on utf8 strings have
-been fixed.
-L<[perl #131575]|https://rt.perl.org/Public/Bug/Display.html?id=131575>
-
-=item *
-
-C<perldoc -f s> now finds C<s///>.
-L<[perl #131371]|https://rt.perl.org/Public/Bug/Display.html?id=131371>
-
-=item *
-
-Some erroneous warnings after utf8 conversion have been fixed.
-L<[perl #131190]|https://rt.perl.org/Public/Bug/Display.html?id=131190>
-
-=item *
-
-The C<jmpenv> frame to catch Perl exceptions is set up lazily, and this used to
-be a bit too lazy.  The catcher is now set up earlier, preventing some possible
-crashes.
-L<[perl #105930]|https://rt.perl.org/Public/Bug/Display.html?id=105930>
-
-=item *
-
-Spurious "Assuming NOT a POSIX class" warnings have been removed.
-L<[perl #131522]|https://rt.perl.org/Public/Bug/Display.html?id=131522>
+XXX
 
 =back
 
+=head1 Known Problems
+
+XXX Descriptions of platform agnostic bugs we know we can't fix go here.  Any
+tests that had to be C<TODO>ed for the release would be noted here.  Unfixed
+platform specific bugs also go here.
+
+[ List each fix as a =item entry ]
+
+=over 4
+
+=item *
+
+XXX
+
+=back
+
+=head1 Errata From Previous Releases
+
+=over 4
+
+=item *
+
+XXX Add anything here that we forgot to add, or were mistaken about, in
+the perldelta of a previous release.
+
+=back
+
+=head1 Obituary
+
+XXX If any significant core contributor has died, we've added a short obituary
+here.
+
 =head1 Acknowledgements
 
-Perl 5.26.1 represents approximately 4 months of development since Perl 5.26.0
-and contains approximately 8,900 lines of changes across 85 files from 23
-authors.
+XXX Generate this with:
 
-Excluding auto-generated files, documentation and release tools, there were
-approximately 990 lines of changes to 38 .pm, .t, .c and .h files.
-
-Perl continues to flourish into its third decade thanks to a vibrant community
-of users and developers.  The following people are known to have contributed
-the improvements that became Perl 5.26.1:
-
-Aaron Crane, Andy Dougherty, Aristotle Pagaltzis, Chris 'BinGOs' Williams,
-Craig A. Berry, Dagfinn Ilmari Mannsåker, David Mitchell, E. Choroba, Eric
-Herman, Father Chrysostomos, Jacques Germishuys, James E Keenan, John SJ
-Anderson, Karl Williamson, Ken Brown, Lukas Mai, Matthew Horsfall, Ricardo
-Signes, Sawyer X, Steve Hay, Tony Cook, Yves Orton, Zefram.
-
-The list above is almost certainly incomplete as it is automatically generated
-from version control history.  In particular, it does not include the names of
-the (very much appreciated) contributors who reported issues to the Perl bug
-tracker.
-
-Many of the changes included in this version originated in the CPAN modules
-included in Perl's core.  We're grateful to the entire CPAN community for
-helping Perl to flourish.
-
-For a more complete list of all of Perl's historical contributors, please see
-the F<AUTHORS> file in the Perl source distribution.
+  perl Porting/acknowledgements.pl v5.26.1..HEAD
 
 =head1 Reporting Bugs
 
@@ -221,13 +393,13 @@ will be sent off to perlbug@perl.org to be analysed by the Perl porting team.
 
 If the bug you are reporting has security implications which make it
 inappropriate to send to a publicly archived mailing list, then see
-L<perlsec/SECURITY VULNERABILITY CONTACT INFORMATION> for details of how to
-report the issue.
+L<perlsec/SECURITY VULNERABILITY CONTACT INFORMATION>
+for details of how to report the issue.
 
 =head1 Give Thanks
 
-If you wish to thank the Perl 5 Porters for the work we had done in Perl 5, you
-can do so by running the C<perlthanks> program:
+If you wish to thank the Perl 5 Porters for the work we had done in Perl 5,
+you can do so by running the C<perlthanks> program:
 
     perlthanks
 
