perldelta for 0cbfaef69bb7

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -89,7 +89,8 @@ There may well be none in a stable release.
 
 =item *
 
-XXX
+Calls to C<require> for an already loaded module are now slightly
+faster.  [perl #132171]
 
 =back
 
