Use library functions instead of manual TAP in t/io/tell.t.
Committer: minor corrections to descriptions.

Dmitry Ulanov is now a Perl author.

For: RT #132276

--- a/AUTHORS
+++ b/AUTHORS
@@ -358,6 +358,7 @@ Diab Jerius			<dj@head-cfa.harvard.edu>
 dLux				<dlux@spam.sch.bme.hu>
 Dmitri Tikhonov			<dmitri@cpan.org>
 Dmitry Karasik			<dk@tetsuo.karasik.eu.org>
+Dmitry Ulanov			<zprogd@gmail.com>
 Dominic Dunlop			<domo@computer.org>
 Dominic Hargreaves		<dom@earth.li>
 Dominique Dumont		<Dominique_Dumont@grenoble.hp.com>
