--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -178,9 +178,33 @@ L<[perl #131000]|https://rt.perl.org/Public/Bug/Display.html?id=131000>
 
 =head1 Acknowledgements
 
-XXX Generate this with:
+Perl 5.27.5 represents approximately 4 weeks of development since Perl 5.27.4
+and contains approximately 29,000 lines of changes across 430 files from 20
+authors.
 
-  perl Porting/acknowledgements.pl v5.25.5..HEAD
+Excluding auto-generated files, documentation and release tools, there were
+approximately 17,000 lines of changes to 340 .pm, .t, .c and .h files.
+
+Perl continues to flourish into its third decade thanks to a vibrant community
+of users and developers.  The following people are known to have contributed
+the improvements that became Perl 5.27.5:
+
+Aaron Crane, Chris 'BinGOs' Williams, Craig A. Berry, Dagfinn Ilmari
+Mannsåker, Dmitry Ulanov, Dominic Hargreaves, Father Chrysostomos, H.Merijn
+Brand, James E Keenan, John P. Linderman, John SJ Anderson, Lukas Mai, Nicolas
+R., Sawyer X, Smylers, Steve Hay, Tom Hukins, Tony Cook, Yves Orton, Zefram.
+
+The list above is almost certainly incomplete as it is automatically generated
+from version control history.  In particular, it does not include the names of
+the (very much appreciated) contributors who reported issues to the Perl bug
+tracker.
+
+Many of the changes included in this version originated in the CPAN modules
+included in Perl's core.  We're grateful to the entire CPAN community for
+helping Perl to flourish.
+
+For a more complete list of all of Perl's historical contributors, please see
+the F<AUTHORS> file in the Perl source distribution.
 
 =head1 Reporting Bugs
 
