--- a/pod/perlhist.pod
+++ b/pod/perlhist.pod
@@ -630,6 +630,7 @@ the strings?).
  Aaron     5.27.2       2017-Jul-20
  Matthew H 5.27.3       2017-Aug-21
  John      5.27.4       2017-Sep-20
+ Steve     5.27.5       2017-Oct-20
 
 =head2 SELECTED RELEASE SIZES
 
