--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -2,28 +2,122 @@
 
 =head1 NAME
 
-perldelta - what is new for perl v5.27.5
+[ this is a template for a new perldelta file.  Any text flagged as XXX needs
+to be processed before release. ]
+
+perldelta - what is new for perl v5.27.6
 
 =head1 DESCRIPTION
 
-This document describes differences between the 5.27.4 release and the 5.27.5
+This document describes differences between the 5.27.5 release and the 5.27.6
 release.
 
-If you are upgrading from an earlier release such as 5.27.3, first read
-L<perl5274delta>, which describes differences between 5.27.3 and 5.27.4.
+If you are upgrading from an earlier release such as 5.27.4, first read
+L<perl5275delta>, which describes differences between 5.27.4 and 5.27.5.
+
+=head1 Notice
+
+XXX Any important notices here
+
+=head1 Core Enhancements
+
+XXX New core language features go here.  Summarize user-visible core language
+enhancements.  Particularly prominent performance optimisations could go
+here, but most should go in the L</Performance Enhancements> section.
+
+[ List each enhancement as a =head2 entry ]
+
+=head1 Security
+
+XXX Any security-related notices go here.  In particular, any security
+vulnerabilities closed should be noted here rather than in the
+L</Selected Bug Fixes> section.
+
+[ List each security issue as a =head2 entry ]
+
+=head1 Incompatible Changes
+
+XXX For a release on a stable branch, this section aspires to be:
+
+    There are no changes intentionally incompatible with 5.XXX.XXX
+    If any exist, they are bugs, and we request that you submit a
+    report.  See L</Reporting Bugs> below.
+
+[ List each incompatible change as a =head2 entry ]
+
+=head1 Deprecations
+
+XXX Any deprecated features, syntax, modules etc. should be listed here.
+
+=head2 Module removals
+
+XXX Remove this section if inapplicable.
+
+The following modules will be removed from the core distribution in a
+future release, and will at that time need to be installed from CPAN.
+Distributions on CPAN which require these modules will need to list them as
+prerequisites.
+
+The core versions of these modules will now issue C<"deprecated">-category
+warnings to alert you to this fact.  To silence these deprecation warnings,
+install the modules in question from CPAN.
+
+Note that these are (with rare exceptions) fine modules that you are encouraged
+to continue to use.  Their disinclusion from core primarily hinges on their
+necessity to bootstrapping a fully functional, CPAN-capable Perl installation,
+not usually on concerns over their design.
+
+=over
+
+=item XXX
+
+XXX Note that deprecated modules should be listed here even if they are listed
+as an updated module in the L</Modules and Pragmata> section.
+
+=back
+
+[ List each other deprecation as a =head2 entry ]
 
 =head1 Performance Enhancements
+
+XXX Changes which enhance performance without changing behaviour go here.
+There may well be none in a stable release.
+
+[ List each enhancement as an =item entry ]
 
 =over 4
 
 =item *
 
-Calls to C<require> for an already loaded module are now slightly faster.
-L<[perl #132171]|https://rt.perl.org/Public/Bug/Display.html?id=132171>
+XXX
 
 =back
 
 =head1 Modules and Pragmata
+
+XXX All changes to installed files in F<cpan/>, F<dist/>, F<ext/> and F<lib/>
+go here.  If Module::CoreList is updated, generate an initial draft of the
+following sections using F<Porting/corelist-perldelta.pl>.  A paragraph summary
+for important changes should then be added by hand.  In an ideal world,
+dual-life modules would have a F<Changes> file that could be cribbed.
+
+The list of new and updated modules is modified automatically as part of
+preparing a Perl release, so the only reason to manually add entries here is if
+you're summarising the important changes in the module update. (Also, if the
+manually-added details don't match the automatically-generated ones, the
+release manager will have to investigate the situation carefully.)
+
+[ Within each section, list entries as an =item entry ]
+
+=head2 New Modules and Pragmata
+
+=over 4
+
+=item *
+
+XXX
+
+=back
 
 =head2 Updated Modules and Pragmata
 
@@ -31,180 +125,283 @@ L<[perl #132171]|https://rt.perl.org/Public/Bug/Display.html?id=132171>
 
 =item *
 
-L<arybase> has been upgraded from version 0.13 to 0.14.
+L<XXX> has been upgraded from version A.xx to B.yy.
+
+=back
+
+=head2 Removed Modules and Pragmata
+
+=over 4
 
 =item *
 
-L<B> has been upgraded from version 1.69 to 1.70.
+XXX
+
+=back
+
+=head1 Documentation
+
+XXX Changes to files in F<pod/> go here.  Consider grouping entries by
+file and be sure to link to the appropriate page, e.g. L<perlfunc>.
+
+=head2 New Documentation
+
+XXX Changes which create B<new> files in F<pod/> go here.
+
+=head3 L<XXX>
+
+XXX Description of the purpose of the new file here
+
+=head2 Changes to Existing Documentation
+
+We have attempted to update the documentation to reflect the changes
+listed in this document.  If you find any we have missed, send email
+to L<perlbug@perl.org|mailto:perlbug@perl.org>.
+
+XXX Changes which significantly change existing files in F<pod/> go here.
+However, any changes to F<pod/perldiag.pod> should go in the L</Diagnostics>
+section.
+
+Additionally, the following selected changes have been made:
+
+=head3 L<XXX>
+
+=over 4
 
 =item *
 
-L<B::Concise> has been upgraded from version 1.001 to 1.002.
+XXX Description of the change here
+
+=back
+
+=head1 Diagnostics
+
+The following additions or changes have been made to diagnostic output,
+including warnings and fatal error messages.  For the complete list of
+diagnostic messages, see L<perldiag>.
+
+XXX New or changed warnings emitted by the core's C<C> code go here.  Also
+include any changes in L<perldiag> that reconcile it to the C<C> code.
+
+=head2 New Diagnostics
+
+XXX Newly added diagnostic messages go under here, separated into New Errors
+and New Warnings
+
+=head3 New Errors
+
+=over 4
 
 =item *
 
-L<B::Deparse> has been upgraded from version 1.42 to 1.43.
+XXX L<message|perldiag/"message">
+
+=back
+
+=head3 New Warnings
+
+=over 4
 
 =item *
 
-L<Config::Perl::V> has been upgraded from version 0.28 to 0.29.
+XXX L<message|perldiag/"message">
+
+=back
+
+=head2 Changes to Existing Diagnostics
+
+XXX Changes (i.e. rewording) of diagnostic messages go here
+
+=over 4
 
 =item *
 
-L<Digest::SHA> has been upgraded from version 5.96 to 5.98.
+XXX Describe change here
+
+=back
+
+=head1 Utility Changes
+
+XXX Changes to installed programs such as F<perlbug> and F<xsubpp> go here.
+Most of these are built within the directory F<utils>.
+
+[ List utility changes as a =head2 entry for each utility and =item
+entries for each change
+Use L<XXX> with program names to get proper documentation linking. ]
+
+=head2 L<XXX>
+
+=over 4
 
 =item *
 
-L<Encode> has been upgraded from version 2.92 to 2.93.
+XXX
+
+=back
+
+=head1 Configuration and Compilation
+
+XXX Changes to F<Configure>, F<installperl>, F<installman>, and analogous tools
+go here.  Any other changes to the Perl build process should be listed here.
+However, any platform-specific changes should be listed in the
+L</Platform Support> section, instead.
+
+[ List changes as an =item entry ].
+
+=over 4
 
 =item *
 
-L<encoding> has been upgraded from version 2.20 to 2.21.
+XXX
+
+=back
+
+=head1 Testing
+
+XXX Any significant changes to the testing of a freshly built perl should be
+listed here.  Changes which create B<new> files in F<t/> go here as do any
+large changes to the testing harness (e.g. when parallel testing was added).
+Changes to existing files in F<t/> aren't worth summarizing, although the bugs
+that they represent may be covered elsewhere.
+
+XXX If there were no significant test changes, say this:
+
+Tests were added and changed to reflect the other additions and changes
+in this release.
+
+XXX If instead there were significant changes, say this:
+
+Tests were added and changed to reflect the other additions and
+changes in this release.  Furthermore, these significant changes were
+made:
+
+[ List each test improvement as an =item entry ]
+
+=over 4
 
 =item *
 
-L<File::Fetch> has been upgraded from version 0.52 to 0.54.
-
-=item *
-
-L<File::Path> has been upgraded from version 2.14 to 2.15.
-
-=item *
-
-L<List::Util> has been upgraded from version 1.48 to 1.49.
-
-=item *
-
-L<Locale::Codes> has been upgraded from version 3.52 to 3.54.
-
-=item *
-
-L<Math::BigInt> has been upgraded from version 1.999806 to 1.999811.
-
-=item *
-
-L<Math::BigInt::FastCalc> has been upgraded from version 0.5005 to 0.5006.
-
-=item *
-
-L<Module::CoreList> has been upgraded from version 5.20170920 to 5.20171020.
-
-=item *
-
-L<NEXT> has been upgraded from version 0.67 to 0.67_01.
-
-=item *
-
-L<Pod::Perldoc> has been upgraded from version 3.28 to 3.2801.
-
-=item *
-
-L<POSIX> has been upgraded from version 1.77 to 1.78.
-
-=item *
-
-L<Scalar::Util> has been upgraded from version 1.48 to 1.49.
-
-=item *
-
-L<Sub::Util> has been upgraded from version 1.48 to 1.49.
-
-=item *
-
-L<Sys::Hostname> has been upgraded from version 1.20 to 1.21.
-
-=item *
-
-L<Test::Simple> has been upgraded from version 1.302073 to 1.302103.
-
-=item *
-
-L<Time::HiRes> has been upgraded from version 1.9743 to 1.9746.
-
-=item *
-
-L<Time::Piece> has been upgraded from version 1.3201 to 1.3202.
+XXX
 
 =back
 
 =head1 Platform Support
 
-=head2 Platform-Specific Notes
+XXX Any changes to platform support should be listed in the sections below.
+
+[ Within the sections, list each platform as an =item entry with specific
+changes as paragraphs below it. ]
+
+=head2 New Platforms
+
+XXX List any platforms that this version of perl compiles on, that previous
+versions did not.  These will either be enabled by new files in the F<hints/>
+directories, or new subdirectories and F<README> files at the top level of the
+source tree.
 
 =over 4
 
-=item CentOS
+=item XXX-some-platform
 
-Compilation on CentOS 5 is now fixed.
+XXX
+
+=back
+
+=head2 Discontinued Platforms
+
+XXX List any platforms that this version of perl no longer compiles on.
+
+=over 4
+
+=item XXX-some-platform
+
+XXX
+
+=back
+
+=head2 Platform-Specific Notes
+
+XXX List any changes for specific platforms.  This could include configuration
+and compilation changes or changes in portability/compatibility.  However,
+changes within modules for platforms should generally be listed in the
+L</Modules and Pragmata> section.
+
+=over 4
+
+=item XXX-some-platform
+
+XXX
+
+=back
+
+=head1 Internal Changes
+
+XXX Changes which affect the interface available to C<XS> code go here.  Other
+significant internal changes for future core maintainers should be noted as
+well.
+
+[ List each change as an =item entry ]
+
+=over 4
+
+=item *
+
+XXX
 
 =back
 
 =head1 Selected Bug Fixes
 
+XXX Important bug fixes in the core language are summarized here.  Bug fixes in
+files in F<ext/> and F<lib/> are best summarized in L</Modules and Pragmata>.
+
+[ List each fix as an =item entry ]
+
 =over 4
 
 =item *
 
-Calling L<exec PROGRAM LIST|perlfunc/exec PROGRAM LIST> with an empty C<LIST>
-has been fixed.  This should call C<execvp()> with an empty C<argv> array
-(containing only the terminating C<NULL> pointer), but was instead just
-returning false (and not setting L<C<$!>|perlvar/$!>).
-L<[perl #131730]|https://rt.perl.org/Public/Bug/Display.html?id=131730>
-
-=item *
-
-The C<gv_fetchmeth_sv> C function stopped working properly in Perl 5.22 when
-fetching a constant with a UTF-8 name if that constant subroutine was stored in
-the stash as a simple scalar reference, rather than a full typeglob.  This has
-been corrected.
-
-=item *
-
-Single-letter debugger commands followed by an argument which starts with
-punctuation  (e.g. C<p$^V> and C<x@ARGV>) now work again.  They had been
-wrongly requiring a space between the command and the argument.
-L<[perl #120174]|https://rt.perl.org/Public/Bug/Display.html?id=120174>
-
-=item *
-
-L<splice|perlfunc/splice ARRAY,OFFSET,LENGTH,LIST> now throws an exception
-("Modification of a read-only value attempted") when modifying a read-only
-array.  Until now it had been silently modifying the array.  The new behaviour
-is consistent with the behaviour of L<push|perlfunc/push ARRAY,LIST> and
-L<unshift|perlfunc/unshift ARRAY,LIST>.
-L<[perl #131000]|https://rt.perl.org/Public/Bug/Display.html?id=131000>
+XXX
 
 =back
 
+=head1 Known Problems
+
+XXX Descriptions of platform agnostic bugs we know we can't fix go here.  Any
+tests that had to be C<TODO>ed for the release would be noted here.  Unfixed
+platform specific bugs also go here.
+
+[ List each fix as an =item entry ]
+
+=over 4
+
+=item *
+
+XXX
+
+=back
+
+=head1 Errata From Previous Releases
+
+=over 4
+
+=item *
+
+XXX Add anything here that we forgot to add, or were mistaken about, in
+the perldelta of a previous release.
+
+=back
+
+=head1 Obituary
+
+XXX If any significant core contributor has died, we've added a short obituary
+here.
+
 =head1 Acknowledgements
 
-Perl 5.27.5 represents approximately 4 weeks of development since Perl 5.27.4
-and contains approximately 29,000 lines of changes across 430 files from 20
-authors.
+XXX Generate this with:
 
-Excluding auto-generated files, documentation and release tools, there were
-approximately 17,000 lines of changes to 340 .pm, .t, .c and .h files.
-
-Perl continues to flourish into its third decade thanks to a vibrant community
-of users and developers.  The following people are known to have contributed
-the improvements that became Perl 5.27.5:
-
-Aaron Crane, Chris 'BinGOs' Williams, Craig A. Berry, Dagfinn Ilmari
-Mannsåker, Dmitry Ulanov, Dominic Hargreaves, Father Chrysostomos, H.Merijn
-Brand, James E Keenan, John P. Linderman, John SJ Anderson, Lukas Mai, Nicolas
-R., Sawyer X, Smylers, Steve Hay, Tom Hukins, Tony Cook, Yves Orton, Zefram.
-
-The list above is almost certainly incomplete as it is automatically generated
-from version control history.  In particular, it does not include the names of
-the (very much appreciated) contributors who reported issues to the Perl bug
-tracker.
-
-Many of the changes included in this version originated in the CPAN modules
-included in Perl's core.  We're grateful to the entire CPAN community for
-helping Perl to flourish.
-
-For a more complete list of all of Perl's historical contributors, please see
-the F<AUTHORS> file in the Perl source distribution.
+  perl Porting/acknowledgements.pl v5.25.5..HEAD
 
 =head1 Reporting Bugs
 
