Show that '/o' modifier no longer has adverse effects on 'split'.
    The underlying problem was already fixed in
    3cb4cde3dd4d2af2f5065053905708bffa5168f9 (Jul 4 2017).  For clarity, adding
    test adapted from original poster in RT 132334.

    Add Harald Jörg to Perl AUTHORS.

--- a/AUTHORS
+++ b/AUTHORS
@@ -486,6 +486,7 @@ Hans Dieter Pearcey		<hdp@pobox.com>
 Hans Ginzel			<hans@kolej.mff.cuni.cz>
 Hans Mulder			<hansmu@xs4all.nl>
 Hans Ranke			<Hans.Ranke@ei.tum.de>
+Harald Jörg			<Harald.Joerg@arcor.de>
 Harmen				<harm@dds.nl>
 Harmon S. Nine			<hnine@netarx.com>
 Harri Pasanen			<harri.pasanen@trema.com>
