Remove use vars from B::Deparse
RT 132429: This causes a slight change to the output value of ${^WARNING_BITS} due to
warnings::register not polluting introspection for B::Deparse.

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -205,6 +205,8 @@ The usage of "use vars" has been discouraged since the introduction of our in
 Perl 5.6.0. Where possible the usage of this pragma has now been removed from
 the Perl source code.
 
+This had a slight effect (for the better) on the output of WARNING_BITS in B::Deparse.
+
 =back
 
 =head2 New Modules and Pragmata
