Document the removal of use vars from sources

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -161,6 +161,16 @@ release manager will have to investigate the situation carefully.)
 
 [ Within each section, list entries as an =item entry ]
 
+=head2 Removal of use vars
+
+=over 4
+
+The usage of "use vars" has been discouraged since the introduction of our in
+Perl 5.6.0. Where possible the usage of this pragma has now been removed from
+the Perl source code.
+
+=back
+
 =head2 New Modules and Pragmata
 
 =over 4
